video change on index.html

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
         <div class="hero-video">
             <video class="video1" autoplay muted loop playsinline>
-                <source src="./assets/4wayvideo.mp4" type="video/mp4">
+                <source src="./assets/4wayvideocompress.mp4" type="video/mp4">
             
             </video>
         </div>
